# sharkr

./: Cargo.toml  Cross.toml  Dockerfile.cross.aarch64  devenv.nix
.github/workflows/: main.yml
docs/: _config.yml  index.md
docs/.sass-cache/caa2ce5cb024066aa69f8a65bb230878bda78b93/: fonts.scssc  jekyll-theme-minimal.scssc  rouge-github.scssc
docs/assets/css/: styles.scss
src/: capture.rs  cli.rs  error.rs  interfaces.rs  lib.rs  main.rs  packet_parser.rs
